--- a/websites/about.html
+++ b/websites/about.html
@@ -51,7 +51,7 @@
 <img class="irc_mi" src="https://media.giphy.com/media/13gvXfEVlxQjDO/giphy.gif" onload="typeof
 google==='object'&amp;&amp;google.aft&amp;&amp;google.aft(this)" width="400" height="400" style="margin-top:
 25px;" data-iml="1561394456219" alt="Image result for gif">
-<img src="https://www.abvirichmondca.com/assets/themes/abvirichmondca/img/City_Of_Richmond_CA.jpg">
+<img src="https://www.abvirichmondca.com/assets/themes/abvirichmondca/img/City_Of_Richmond_CA.jpg" width="1250px">
 
 </body>
 </html>
