--- a/websites/contact.html
+++ b/websites/contact.html
@@ -16,7 +16,7 @@
   </div>
 
 <center>
-  <form>
+  <form method="POST" action="https://formspree.io/lizbeth.ibarra@scholar.smash.org">
     <div id="contact">
 <br>
 	   <input type="text" id="firstname" placeholder= "First Name" >
