--- a/websites/about.html
+++ b/websites/about.html
@@ -7,6 +7,7 @@
 
 <body>
   <nav class="navbar">
+       <li> <a href="index.html">Lizbeth!</a></li>
        <li> <a href="about.html">About Me!</a></li>
        <li> <a href="resume.html">Resume!</a></li>
        <li> <a href="inspo.html">Inspo!</a></li>
