--- a/websites/index.html
+++ b/websites/index.html
@@ -12,5 +12,7 @@
       <li> <a href="inspo.html">Inspo!</a></li>
       <li> <a href="contact.html">Contact Me!</a></li>
  </nav>
+ <h1> Welcome to my personal website!</h1>
+ <img src="assets/yosemite.jpg" width="1250px">
 </body>
 </html>
