--- a/websites/resume.html
+++ b/websites/resume.html
@@ -12,8 +12,6 @@
       <li> <a href="inspo.html">Inspo!</a></li>
       <li> <a href="contact.html">Contact Me!</a></li>
  </nav>
-  <div id="resume">
- <iframe src="https://docs.google.com/document/d/e/2PACX-1vRYlGnZ5sac9ALJZX_MbdMY9pJxwW5e0TpWe1Vow9kRHGw0-xzMzCtfKk-kBL1of3fksUAMubcAQxN3/pub?embedded=true"></iframe>
- </div>
+<iframe src="assets/resume.pdf" width="75%" height="832px" class="center"></iframe>
 </body>
 </html>
