--- a/websites/contact.html
+++ b/websites/contact.html
@@ -17,7 +17,7 @@
   </div>
 
 <center>
-  <form method="POST" action="https://formspree.io/lizbeth.ibarra@scholar.smash.org">
+  <form action="https://formspree.io/lizbeth.ibarra@scholar.smash.org" method="POST">
     <div id="contact">
 <br>
 	   <input type="text" id="firstname" placeholder= "First Name" >
